# dijilint

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
src/dijilinter/: __main__.py  base.py  checkers.py  filters.py  flake_plugin.py  interfaces.py  runners.py  settings.py  types.py
src/dijilinter/analyzers/: __init__.py  base.py  call.py  conditional.py  exception_block.py  model.py  try_block.py
src/dijilinter/files/: discovery.py  parser.py
src/dijilinter/fixers/: __init__.py  base.py  exception_block.py  exceptions.py
src/dijilinter/violations/: codes.py  violations.py
