[metadata]
name = dijilinter
version = 1.0.2
url = https://www.diji.tech/
author = Ömer Faruk Yığın
author_email = omer@diji.tech
description = Dijitech linter

[options]
python_requires = >=3.8

[flake8]
max-line-length=100
extend-ignore=
    E203
    ANN101, ANN102
    ANN204
per-file-ignores=
    src/tests/*:ANN201
exclude=
    __init__.py
[isort]
profile = black
